Downloading the warc before processing it.